@@ -20,6 +20,9 @@ Changes in version 0.1.2.7-alpha - 2007-??-??
       indefinitely, if they came from nontrusted authorities.  Now we
       discard them if they are more than 10 days old.
     - Fix crash with "tor --list-fingerprint" (reported by seeess).
+    - Expire socks connections if they spend too long waiting for the
+      handshake to finish. Previously we would let them sit around for
+      days, if the connecting application didn't close them either.
 
 
 Changes in version 0.1.2.6-alpha - 2007-01-09
